--- a/index.html
+++ b/index.html
@@ -1,57 +1,195 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>For My Love ❤️</title>
+<meta charset="UTF-8">
+<title>For My Karuvachiii ❤️</title>
+
 <style>
 body {
     text-align: center;
-    font-family: 'Arial';
-    background: linear-gradient(to right, #ff9a9e, #fad0c4);
+    font-family: Arial, sans-serif;
+    background: linear-gradient(to right, #ff758c, #ff7eb3);
     color: white;
-    margin-top: 120px;
+    margin: 0;
+    padding: 20px;
+    overflow: hidden;
 }
+
 h1 {
     font-size: 40px;
 }
-p {
-    font-size: 20px;
-}
+
 button {
     font-size: 20px;
-    padding: 12px 25px;
+    padding: 12px 30px;
     margin: 20px;
     border: none;
     border-radius: 30px;
     cursor: pointer;
+    transition: 0.3s;
 }
+
 #yesBtn {
-    background-color: #ff4d6d;
-    color: white;
-}
-#noBtn {
     background-color: white;
     color: #ff4d6d;
+}
+
+#noBtn {
+    background-color: #ff4d6d;
+    color: white;
+    position: absolute;
+}
+
+#message {
+    position: fixed;
+    bottom: 20px;
+    width: 100%;
+    font-size: 20px;
+}
+
+/* HEART RAIN */
+.heart {
+    position: fixed;
+    top: -10px;
+    font-size: 20px;
+    animation: fall linear infinite;
+}
+
+@keyframes fall {
+    to {
+        transform: translateY(100vh);
+        opacity: 0;
+    }
+}
+
+/* TYPEWRITER */
+#loveLetter {
+    width: 80%;
+    margin: auto;
+    font-size: 22px;
+    line-height: 1.6;
+    white-space: pre-line;
+}
+
+/* GLOW EFFECT */
+.glow {
+    font-size: 28px;
+    font-weight: bold;
+    animation: glow 1s ease-in-out infinite alternate;
+}
+
+@keyframes glow {
+    from {
+        text-shadow: 0 0 10px #fff, 0 0 20px #ff4d6d, 0 0 30px #ff4d6d;
+    }
+    to {
+        text-shadow: 0 0 20px #fff, 0 0 30px #ff1a4d, 0 0 40px #ff1a4d;
+    }
 }
 </style>
 </head>
 
 <body>
 
-<h1>My Beautiful Love ❤️</h1>
-<p>You make my world brighter every single day.</p>
-<p>Will you be my Valentine? 💖</p>
+<h1>My Sweet Karuvachiii ❤️</h1>
+<p>Will you be my Valentine forever? 💖</p>
 
 <button id="yesBtn" onclick="yesClicked()">Yes, Forever ❤️</button>
-<button id="noBtn" onclick="noClicked()">No 😢</button>
+<button id="noBtn" onmouseover="moveButton()" onclick="noClicked()">No 😢</button>
+
+<div id="message"></div>
 
 <script>
+
+let yesSize = 20;
+
+// YES CLICK
 function yesClicked() {
-    document.body.innerHTML = "<h1>Yay! ❤️</h1><p>You just made me the happiest person alive! I love you so much 💕</p>";
+
+    document.body.innerHTML = `
+        <h1>Karuvachiii ❤️</h1>
+    <img src="karuvachiii.jpg" width="250" style="border-radius:20px; margin-top:20px;">
+    <div id="loveLetter"></div>
+    <br>
+    <div class="glow">I Love You Dii Pondatii ♥</div>
+
+    <audio id="bgMusic" autoplay loop>
+        <source src="music.mp3" type="audio/mpeg">
+    </audio>
+`;
+
+    startHeartRain();
+    typeWriter();
+}
+
+// TYPEWRITER FUNCTION
+function typeWriter() {
+
+    const text = `Every love story is beautiful, but ours is my favorite. ♥
+
+You made my life too beautiful.
+
+From the day you came into my life, everything changed for the better.
+
+Your smile is my peace, your voice is my comfort, 
+and your love is my biggest strength.
+
+I promise to stand with you, care for you,
+support you in every situation,
+and love you more with each passing day.
+
+You are not just my love…
+You are my home, my happiness, my everything.
+
+Forever yours,
+Surya ❤️`;
+
+    let i = 0;
+    const speed = 50;
+
+    function typing() {
+        if (i < text.length) {
+            document.getElementById("loveLetter").innerHTML += text.charAt(i);
+            i++;
+            setTimeout(typing, speed);
+        }
+    }
+
+    typing();
+}
+
+// NO BUTTON RUN + YES GROW
+function moveButton() {
+    var x = Math.random() * (window.innerWidth - 100);
+    var y = Math.random() * (window.innerHeight - 50);
+    document.getElementById("noBtn").style.left = x + "px";
+    document.getElementById("noBtn").style.top = y + "px";
+
+    yesSize += 5;
+    document.getElementById("yesBtn").style.fontSize = yesSize + "px";
 }
 
 function noClicked() {
-    document.body.innerHTML = "<h1>Are you sure? 🥺</h1><p>Think again... my heart is only yours ❤️</p>";
+    document.getElementById("message").innerHTML = "😜 Karuvachiii… Only YES is allowed ❤️";
 }
+
+// HEART RAIN
+function startHeartRain() {
+    setInterval(function() {
+        const heart = document.createElement("div");
+        heart.className = "heart";
+        heart.innerHTML = "❤️";
+        heart.style.left = Math.random() * 100 + "vw";
+        heart.style.fontSize = (Math.random() * 20 + 15) + "px";
+        heart.style.animationDuration = (Math.random() * 2 + 3) + "s";
+        document.body.appendChild(heart);
+
+        setTimeout(() => {
+            heart.remove();
+        }, 5000);
+    }, 200);
+}
+
 </script>
 
 </body>
