--- a/index.html
+++ b/index.html
@@ -109,95 +109,68 @@ function yesClicked() {
     document.body.innerHTML = `
         <h1>Karuvachiii ❤️</h1>
     <style>
-.heart-gallery {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 40px;
-    margin-top: 40px;
-    flex-wrap: wrap;
+body{
+    background: linear-gradient(to bottom, #ffe6f0, #fff);
+    overflow-x: hidden;
 }
 
-.heart {
-    width: 220px;
-    height: 200px;
-    position: relative;
-    transform: rotate(-45deg);
-    overflow: hidden;
-    animation: float 3s ease-in-out infinite;
+/* Heart container */
+.heart-gallery{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    gap:40px;
+    margin-top:50px;
+    flex-wrap:wrap;
 }
 
-.heart img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transform: rotate(45deg);
-}
-
-.heart:before,
-.heart:after {
-    content: "";
-    position: absolute;
-    width: 220px;
-    height: 200px;
-    background: inherit;
-    border: 4px solid #ff4d6d;
-    border-radius: 50%;
-}
-
-.heart:before {
-    top: -110px;
-    left: 0;
-}
-
-.heart:after {
-    left: 110px;
-    top: 0;
-}
-
-.heart {
-    border: 4px solid #ff4d6d;
-    border-top: none;
-    border-left: none;
-    border-radius: 20px;
-    box-shadow: 0 0 20px #ff4d6d;
+/* Heart shape */
+.heart{
+    width:220px;
+    height:220px;
+    position:relative;
+    overflow:hidden;
+    clip-path: path("M110 200 L20 110 A50 50 0 0 1 110 40 A50 50 0 0 1 200 110 Z");
+    border:5px solid #ff3366;
+    box-shadow:0 0 25px #ff4d88;
+    transition:0.4s;
 }
 
 /* Bigger middle heart */
-.heart.middle {
-    width: 260px;
-    height: 240px;
-    box-shadow: 0 0 40px #ff004f;
+.heart.middle{
+    width:260px;
+    height:260px;
+    box-shadow:0 0 40px #ff0066;
 }
 
-/* Floating animation */
-@keyframes float {
-    0% { transform: rotate(-45deg) translateY(0px); }
-    50% { transform: rotate(-45deg) translateY(-15px); }
-    100% { transform: rotate(-45deg) translateY(0px); }
+.heart img{
+    width:100%;
+    height:100%;
+    object-fit:cover;
+}
+
+/* Hover animation */
+.heart:hover{
+    transform: scale(1.08);
 }
 </style>
 
 
 <div class="heart-gallery">
 
-    <!-- Left Image -->
     <div class="heart">
         <img src="left.jpg">
     </div>
 
-    <!-- Middle Image (Karuvachiii) -->
     <div class="heart middle">
         <img src="Karuvachiii.jpg">
     </div>
 
-    <!-- Right Image -->
     <div class="heart">
         <img src="right.jpg">
     </div>
 
 </div>
-    <div id="loveLetter"></div>
     <br>
     <div class="glow">I Love You Dii Pondatii ♥</div>
 
@@ -304,5 +277,6 @@ function startHeartRain() {
 
 </body>
 </html>
+
 
 
