--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {
     color: white;
     margin: 0;
     padding: 20px;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 h1 {
@@ -62,78 +62,6 @@ button {
     }
 }
 
-/* HEART IMAGE GALLERY */
-.heart-gallery {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 40px;
-    margin: 40px 0;
-}
-
-.heart-frame {
-    width: 250px;
-    height: 230px;
-    background: red;
-    position: relative;
-    transform: rotate(-45deg);
-    animation: float 3s ease-in-out infinite;
-}
-
-.heart-frame.big {
-    width: 320px;
-    height: 300px;
-}
-
-.heart-frame::before,
-.heart-frame::after {
-    content: "";
-    width: 250px;
-    height: 230px;
-    background: red;
-    border-radius: 50%;
-    position: absolute;
-}
-
-.heart-frame::before {
-    top: -125px;
-    left: 0;
-}
-
-.heart-frame::after {
-    left: 125px;
-    top: 0;
-}
-
-.heart-frame.big::before,
-.heart-frame.big::after {
-    width: 320px;
-    height: 300px;
-}
-
-.heart-frame.big::before {
-    top: -160px;
-}
-
-.heart-frame.big::after {
-    left: 160px;
-}
-
-.heart-frame img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transform: rotate(45deg);
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-@keyframes float {
-    0%,100% { transform: rotate(-45deg) translateY(0px); }
-    50% { transform: rotate(-45deg) translateY(-15px); }
-}
-
 /* TYPEWRITER */
 #loveLetter {
     width: 80%;
@@ -175,42 +103,29 @@ button {
 
 let yesSize = 20;
 
+// YES CLICK
 function yesClicked() {
 
     document.body.innerHTML = `
-        <h1>Karuvachiii ❤️</h1>
+<h1>Karuvachiii ❤️</h1>
+    <img src="karuvachiii.jpg" width="250" style="border-radius:20px; box-shadow:0 0 30px white;">
+    <div id="loveLetter"></div>
+    <br>
+    <div class="glow">I Love You Dii Pondatii ♥</div>
 
-        <div class="heart-gallery">
-            <div class="heart-frame">
-                <img src="left.jpg">
-            </div>
-
-            <div class="heart-frame big">
-                <img src="Karuvachiii.jpg">
-            </div>
-
-            <div class="heart-frame">
-                <img src="right.jpg">
-            </div>
-        </div>
-
-        <div id="loveLetter"></div>
-        <br>
-        <div class="glow">I Love You Dii Pondatii ♥</div>
-
-        <audio autoplay loop>
-            <source src="music.mp3" type="audio/mpeg">
-        </audio>
-    `;
-
+    <audio id="bgMusic" autoplay loop>
+        <source src="music.mp3" type="audio/mpeg">
+    </audio>
+`;
     startHeartRain();
     typeWriter();
 }
 
+// TYPEWRITER FUNCTION
 function typeWriter() {
 
     const text = `Every love story is beautiful, but ours is my favorite. ♥
-    
+
 You made my life too beautiful.
 
 From the day you came into my life, everything changed for the better.
@@ -248,10 +163,10 @@ You are not just my love…
 You are my home, my happiness, my everything.
 
 Forever yours,
-Surya ❤️`;
+Mylu ❤️`;
 
     let i = 0;
-    const speed = 40;
+    const speed = 50;
 
     function typing() {
         if (i < text.length) {
@@ -264,6 +179,7 @@ Surya ❤️`;
     typing();
 }
 
+// NO BUTTON RUN + YES GROW
 function moveButton() {
     var x = Math.random() * (window.innerWidth - 100);
     var y = Math.random() * (window.innerHeight - 50);
@@ -275,10 +191,10 @@ function moveButton() {
 }
 
 function noClicked() {
-    document.getElementById("message").innerHTML =
-        "😜 Karuvachiii… Only YES is allowed ❤️";
+    document.getElementById("message").innerHTML = "😜 Karuvachiii… Only YES is allowed ❤️";
 }
 
+// HEART RAIN
 function startHeartRain() {
     setInterval(function() {
         const heart = document.createElement("div");
